--- a/src/taskpane/app/app.component.html
+++ b/src/taskpane/app/app.component.html
@@ -1,15 +1,49 @@
-<div class="ms-Grid">
-    <div class="ms-Grid-row">
-        <button class="ms-Button ms-Button--compound ms-Grid-col ms-sm12 ms-depth-16" *ngFor="let asset of assets"
-            (click)="insert(asset.content)">
-            <span class="ms-Button-icon">
-                <i class="ms-Icon ms-Icon--plus"></i>
-            </span>
-            <span class="ms-Button-label" [innerHtml]="asset.content | sanitize">
-            </span>
-            <span class="ms-Button-description">
-                {{ asset.title }}
-            </span>
-        </button>
+<div class="ms-CommandBar ms-CommandBar--navBar">
+    <div class="ms-CommandBar-sideCommands">
+        <div class="ms-CommandButton">
+            <div class="ms-CommandButton-button">
+                <span class="ms-CommandButton-label">
+                    Select an Icon
+                </span>
+            </div>
+        </div>
+    </div>
+    <div class="ms-CommandBar-mainArea">
+        <!--
+        <div class="ms-CommandButton ms-CommandButton--actionButton">
+            <button class="ms-CommandButton-button">
+                <span class="ms-CommandButton-icon ms-fontColor-themePrimary">
+                    <i class="ms-Icon ms-Icon--Back"></i>
+                </span>
+                <span class="ms-CommandButton-label"></span>
+            </button>
+        </div>
+        -->
+    </div>
+</div>
+<div class="ms-OrgChart" style="margin-left: 6px; margin-right: 6px;">
+    <div class="ms-OrgChart-group">
+        <ul class="ms-OrgChart-list">
+            <li class="ms-OrgChart-listItem" *ngFor="let asset of assets">
+                <button class="ms-OrgChart-listItemBtn" tabindex="1" (click)="insert(asset.content)">
+                    <div class="ms-Persona">
+                        <div class="ms-Persona-imageArea">
+                            <span class="ms-Persona-image" [innerHtml]="asset.content | sanitize">
+                            </span>
+                        </div>
+                        <div class="ms-Persona-presence">
+                        </div>
+                        <div class="ms-Persona-details">
+                            <div class="ms-Persona-primaryText">
+                                {{ asset.title }}
+                            </div>
+                            <div class="ms-Persona-secondaryText">
+                                {{ asset.category}}
+                            </div>
+                        </div>
+                    </div>
+                </button>
+            </li>
+        </ul>
     </div>
 </div>
